Updated: builds with openjdk11 (next - migrate to stream api, build-in http client, etc. cool new language features)